[metadata]
name = FreeEnterprise4
description = Free Enterprise for AP
author = Rosalie
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
    FreeEnt
python_requires = >= 3.8
zip_safe = no